--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -29,11 +29,14 @@
         </div>
         <div class="hero-img">
           <button class="btn-link" id="btn-open-modal">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 350 350" width="64px" height="64px">
-              <path d="M175 .5C78.3.5 0 78.8 0 175.5s78.3 175 175 175 175-78.3 175-175S271.7.5 175 .5z" fill="currentColor"/>
-              <path d="M236.8 189.6l-104.4 71.8c-2.9 2-6.3 3-9.7 3-2.7 0-5.4-.6-7.9-2-5.6-3-9.1-8.8-9.1-15.1V103.7c0-6.3 3.5-12.1 9.1-15.1 5.6-2.9 12.4-2.5 17.6 1.1l104.4 71.8c4.6 3.2 7.4 8.4 7.4 14.1 0 5.5-2.7 10.8-7.4 14z" fill="#fff"/>
+            <svg width="64" height="64" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 67 67">
+              <g fill-rule="nonzero" fill="none">
+                <path d="M33.5 0C14.989 0 0 14.989 0 33.5S14.989 67 33.5 67 67 52.011 67 33.5 52.011 0 33.5 0z" fill="currentColor"/>
+                <path d="M46.664 36.11L27.82 49.444a3.023 3.023 0 0 1-1.75.557c-.488 0-.975-.111-1.426-.371A3.2 3.2 0 0 1 23 46.825V20.16a3.2 3.2 0 0 1 1.643-2.803 3.02 3.02 0 0 1 3.176.204l18.845 13.332A3.207 3.207 0 0 1 48 33.511a3.176 3.176 0 0 1-1.336 2.6z" fill="#FFF"/>
+              </g>
             </svg>
           </button>
+          
           <img src="<%= asset_url('img_hero_01.png') %>" alt="Punch screenshot">
         </div>
       </div>
@@ -251,7 +254,7 @@
   <div class="modal-wrapper" id="punch-modal">
     <div class="modal">
       <button class="btn-link modal-close">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 28"><defs><path id="a" d="M13.786 12l8.058-8.057a1.263 1.263 0 0 0-1.787-1.787L12 10.214 3.786 2A1.263 1.263 0 1 0 2 3.786L10.214 12 2 20.214A1.263 1.263 0 1 0 3.786 22L12 13.786 20.214 22A1.263 1.263 0 0 0 22 20.214L13.786 12z"/></defs><g fill="none" fill-rule="evenodd"><mask id="b" fill="#fff"><use xlink:href="#a"/></mask><use fill="#000" fill-rule="nonzero" xlink:href="#a"/><g fill="#6C777E" mask="url(#b)"><path d="M0 0h24v24H0z"/></g></g></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 28"><defs><path id="a" d="M13.786 12l8.058-8.057a1.263 1.263 0 0 0-1.787-1.787L12 10.214 3.786 2A1.263 1.263 0 1 0 2 3.786L10.214 12 2 20.214A1.263 1.263 0 1 0 3.786 22L12 13.786 20.214 22A1.263 1.263 0 0 0 22 20.214L13.786 12z"/></defs><g fill="none" fill-rule="evenodd"><mask id="b" fill="currentColor"><use xlink:href="#a"/></mask><use fill="currentColor" fill-rule="nonzero" xlink:href="#a"/><g fill="currentColor" mask="url(#b)"><path d="M0 0h24v24H0z"/></g></g></svg>
       </button>
       <div class="modal-body">
         <div id="punch-video"></div>
