re-new google form && add re-capcha

--- a/app/assets/stylesheets/modules/_buttons.scss
+++ b/app/assets/stylesheets/modules/_buttons.scss
@@ -9,7 +9,8 @@
 
   &:hover,
   &:active,
-  &:focus {
+  &:focus,
+  &:visited {
     background: $primary-color;
     border: $primary-color;
     color: $light-color;
