--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -57,5 +57,6 @@ window.domain = '<%= ENV["APP_DOMAIN"] %>'
 
 <%= javascript_include_tag('application') %>
 <%= yield(:js) %>
+<script src='https://www.google.com/recaptcha/api.js' async defer></script>
 </body>
 </html>
