--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -21,29 +21,33 @@
       <p class="text-center"><%= t('.instruction') %> <%= link_to t('.features_link'), features_path %></p>
 
       <div class="contact-form">
-        <form class="form" action="https://docs.google.com/forms/d/e/1FAIpQLSfFe0wAmMMPM0W6BWbTMGHrj0FMRH4-CE8WHkC43COmwhgNYA/formResponse" target="_self" method="POST" id="mG61Hd">
+        <form class="form" action="https://docs.google.com/forms/d/e/1FAIpQLSemF8czJOX0ed6OUU0VEka6z5Q34zP5ryLwp3b52IOPRqIjSA/formResponse" target="_self" method="POST" id="mG61Hd">
           <input type="hidden" name="fvv" value="1">
-          <input type="hidden" name="draftResponse" value="[null,null,&quot;-2168202203579643943&quot;]">
+          <input type="hidden" name="draftResponse" value="[null,null,&quot;7747585185899294119&quot;]">
           <input type="hidden" name="pageHistory" value="0">
-          <input type="hidden" name="fbzx" value="-2168202203579643943">
+          <input type="hidden" name="fbzx" value="7747585185899294119">
 
           <div class="form-group">
             <label class="form-label"><%= t('.label.name') %></label>
-            <input type="text" class="form-input" autocomplete="off" name="entry.690197780" value="" required>
+            <input type="text" class="form-input" autocomplete="off" name="entry.1021487635" value="" required>
           </div>
 
           <div class="form-group">
             <label class="form-label"><%= t('.label.email') %></label>
-            <input type="email" class="form-input" autocomplete="off" name="entry.486098797" value="" required>
+            <input type="email" class="form-input" autocomplete="off" name="entry.1449509462" value="" required>
           </div>
 
           <div class="form-group">
             <label class="form-label"><%= t('.label.message') %></label>
-            <textarea class="form-input" name="entry.1118070560" required="" placeholder></textarea>
+            <textarea class="form-input" name="entry.245985204" required></textarea>
           </div>
 
           <div class="form-group">
-            <button type="submit" class="btn"><%= t('.submit') %></button>
+            <div class="g-recaptcha" data-sitekey="6Ld2rKUUAAAAADJRoDisWCMYAaOC-mYXJHYNzgNj" data-theme="dark"></div>
+          </div>
+
+          <div class="form-group">
+            <button type="submit" class="btn btn-submit-form"><%= t('.submit') %></button>
           </div>
         </form>
       </div>
