--- a/app/views/pages/get_started.html.erb
+++ b/app/views/pages/get_started.html.erb
@@ -21,34 +21,38 @@
       <p class="text-center"><%= t('.instruction_html') %></p>
 
       <div class="contact-form">
-        <form class="form" action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSdzeEiBKj54pi8nmXX7wJK8MKuyYzDRddJimTNpLRTKFJSW0Q/formResponse" target="_self" method="POST" id="mG61Hd">
+        <form class="form" action="https://docs.google.com/forms/d/e/1FAIpQLSdbmAfk3YVVWBEXt3sLhf5BC5yZbFqPEwDid3M8FbvoMZd28Q/formResponse" target="_self" method="POST" id="mG61Hd">
           <input type="hidden" name="fvv" value="1">
-          <input type="hidden" name="draftResponse" value="[null,null,&quot;3698132909207194506&quot;]">
+          <input type="hidden" name="draftResponse" value="[null,null,&quot;-3826634020807977928&quot;]">
           <input type="hidden" name="pageHistory" value="0">
-          <input type="hidden" name="fbzx" value="3698132909207194506">
+          <input type="hidden" name="fbzx" value="-3826634020807977928">
 
           <div class="form-group">
             <label class="form-label"><%= t('.label.company_name') %></label>
-            <input type="text" class="form-input" autocomplete="off" name="entry.11265794" value="" required>
+            <input type="text" class="form-input" autocomplete="off" name="entry.28837624" value="">
           </div>
 
           <div class="form-group">
             <label class="form-label"><%= t('.label.email') %></label>
-            <input type="email" class="form-input" autocomplete="off" name="entry.1853574392" value="" required>
+            <input type="email" class="form-input" autocomplete="off" name="entry.1214969370" value="" required>
           </div>
 
           <div class="form-group">
             <label class="form-label"><%= t('.label.phone_number') %></label>
-            <input type="text" class="form-input" autocomplete="off" name="entry.477376212" value="" required>
+            <input type="text" class="form-input" autocomplete="off" name="entry.1284051369" value="">
           </div>
 
           <div class="form-group">
             <label class="form-label"><%= t('.label.message') %></label>
-            <textarea class="form-input" name="entry.1627838314" required></textarea>
+            <textarea class="form-input" name="entry.2026176465" required></textarea>
           </div>
 
           <div class="form-group">
-            <button type="submit" class="btn"><%= t('.submit') %></button>
+            <div class="g-recaptcha" data-sitekey="6LfsrKUUAAAAANkeH4axY19O5jHKA4q4jH0ULFc0" data-theme="dark"></div>
+          </div>
+
+          <div class="form-group">
+            <button type="submit" class="btn btn-submit-form"><%= t('.submit') %></button>
           </div>
         </form>
       </div>
