--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -21,7 +21,7 @@
       <p class="text-center"><%= t('.instruction') %> <%= link_to t('.features_link'), features_path %></p>
 
       <div class="contact-form">
-        <form class="form" action="https://docs.google.com/forms/d/e/1FAIpQLSemF8czJOX0ed6OUU0VEka6z5Q34zP5ryLwp3b52IOPRqIjSA/formResponse" target="_self" method="POST" id="mG61Hd">
+        <form class="form js-form" action="https://docs.google.com/forms/d/e/1FAIpQLSemF8czJOX0ed6OUU0VEka6z5Q34zP5ryLwp3b52IOPRqIjSA/formResponse" target="_self" method="POST" id="mG61Hd">
           <input type="hidden" name="fvv" value="1">
           <input type="hidden" name="draftResponse" value="[null,null,&quot;7747585185899294119&quot;]">
           <input type="hidden" name="pageHistory" value="0">
@@ -29,16 +29,16 @@
 
           <div class="form-group">
             <label class="form-label"><%= t('.label.name') %></label>
-            <input type="text" class="form-input" autocomplete="off" name="entry.1021487635" value="" required>
+            <input type="text" class="form-input" autocomplete="off" name="entry.1021487635" value="">
           </div>
 
           <div class="form-group">
-            <label class="form-label"><%= t('.label.email') %></label>
+            <label class="form-label"><%= t('.label.email') %> <strong class="text-red">*</strong></label>
             <input type="email" class="form-input" autocomplete="off" name="entry.1449509462" value="" required>
           </div>
 
           <div class="form-group">
-            <label class="form-label"><%= t('.label.message') %></label>
+            <label class="form-label"><%= t('.label.message') %> <strong class="text-red">*</strong></label>
             <textarea class="form-input" name="entry.245985204" required></textarea>
           </div>
 
