--- a/app/views/pages/get_started.html.erb
+++ b/app/views/pages/get_started.html.erb
@@ -21,7 +21,7 @@
       <p class="text-center"><%= t('.instruction_html') %></p>
 
       <div class="contact-form">
-        <form class="form" action="https://docs.google.com/forms/d/e/1FAIpQLSdbmAfk3YVVWBEXt3sLhf5BC5yZbFqPEwDid3M8FbvoMZd28Q/formResponse" target="_self" method="POST" id="mG61Hd">
+        <form class="form js-form" action="https://docs.google.com/forms/d/e/1FAIpQLSdbmAfk3YVVWBEXt3sLhf5BC5yZbFqPEwDid3M8FbvoMZd28Q/formResponse" target="_self" method="POST" id="mG61Hd">
           <input type="hidden" name="fvv" value="1">
           <input type="hidden" name="draftResponse" value="[null,null,&quot;-3826634020807977928&quot;]">
           <input type="hidden" name="pageHistory" value="0">
@@ -33,17 +33,17 @@
           </div>
 
           <div class="form-group">
-            <label class="form-label"><%= t('.label.email') %></label>
+            <label class="form-label"><%= t('.label.email') %> <strong class="text-red">*</strong></label>
             <input type="email" class="form-input" autocomplete="off" name="entry.1214969370" value="" required>
           </div>
 
           <div class="form-group">
             <label class="form-label"><%= t('.label.phone_number') %></label>
-            <input type="text" class="form-input" autocomplete="off" name="entry.1284051369" value="">
+            <input type="number" class="form-input" autocomplete="off" name="entry.1284051369" value="">
           </div>
 
           <div class="form-group">
-            <label class="form-label"><%= t('.label.message') %></label>
+            <label class="form-label"><%= t('.label.message') %> <strong class="text-red">*</strong></label>
             <textarea class="form-input" name="entry.2026176465" required></textarea>
           </div>
 
