update personal report table

--- a/frontend/src/scss/_tables.scss
+++ b/frontend/src/scss/_tables.scss
@@ -56,6 +56,22 @@
     font-style: italic;
   }
 
+  tr.is-holiday {
+    background-color: rgba($notice-color-light, .3);
+
+    td:first-child {
+      color: rgba($notice-color, .7);
+    }
+  }
+
+  tr.is-breakday {
+    background-color: rgba($gray-color-light, .4);
+
+    td:first-child {
+      color: $gray-color-crayzola;
+    }
+  }
+
   tr:last-child td {
     border-bottom: 0;
   }
@@ -89,6 +105,49 @@
       opacity: 0;
 
       &.show { opacity: 1; }
+    }
+  }
+
+  &.table-bordered {
+    box-shadow: 0 1px 6px 0 rgba($black-color, .1);
+    z-index: 1;
+
+    th + th,
+    td + td {
+      border-left: $border-width solid $border-color;
+      text-align: center;
+      width: 7rem;
+      padding: 0 .9rem;
+      height: 2.4rem;
+    }
+
+    th:first-child,
+    td:first-child {
+      width: 10.4rem;
+      font-weight: 700;
+    }
+
+    thead th {
+      box-shadow: $border-width $border-width $border-color;
+      background-color: $light-color;
+    }
+
+    td.is-overflow span {
+      display: block;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      max-width: 5rem;
+      margin: 0 auto;
+    }
+  }
+
+  &.has-fixed-head {
+    position: relative;
+
+    thead th {
+      position: sticky;
+      top: 0;
     }
   }
 }
