vuelidate ip form

--- a/frontend/src/scss/_forms.scss
+++ b/frontend/src/scss/_forms.scss
@@ -100,3 +100,10 @@ input[type=search] {
   }
 }
 
+.form-input.is-success {
+  border-color: $success-color;
+
+  &:focus {
+    box-shadow: none;
+  }
+}
