fix login page style

--- a/app/assets/stylesheets/modules/_utilities.scss
+++ b/app/assets/stylesheets/modules/_utilities.scss
@@ -109,3 +109,9 @@
         -o-transform-origin: 0 0;
            transform-origin: 0 0;
 }
+
+.centered {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
