Keep alive/sidebar (#765)
* Update issue templates

* Update issue templates

* wrong route name

* hot fix calculate days off

* fix pagination in Group attendances and Group request

* fix dayoff status in personal report

* refactor and add date_type to params

* refactor

* fix

* add send mail via aws sdk

* prettier

* Punch/ui (#764)

* add PunchUI / Punch Icons

* prettier file

* correctly sidebar with keep-alive and component attr

Co-authored-by: Michael Tran <mictran205@gmail.com>
Co-authored-by: xuan.tuan <xuan.tuan@1pac.vn>
Co-authored-by: xuan.tuan <44386896+tuannx21@users.noreply.github.com>
Co-authored-by: nguyenthanhcong101096 <nguyenthanhcong101096@gmail.com>
Co-authored-by: CongNT <30992738+nguyenthanhcong101096@users.noreply.github.com>

--- a/frontend/src/scss/_base.scss
+++ b/frontend/src/scss/_base.scss
@@ -14,12 +14,8 @@ body {
   }
 }
 
-.main {
-  background: $gray-color-lightest;
-  padding: 0.8rem 2rem 0;
-  margin-left: 10rem;
-  width: 100%;
-  min-height: 100vh;
+main {
+  min-height: calc(100vh - 11.3rem);
 }
 
 svg {
